--- a/web/src/views/index.jade
+++ b/web/src/views/index.jade
@@ -16,3 +16,4 @@ html(lang='en', ng-app='ML')
       include mixins/footer
 
     script(src='index.js')
+    script(src='https://maps.googleapis.com/maps/api/js?sensor=false')
