Google Map component: inject API script only if the directive is detected (asynchronous)

--- a/web/src/views/index.jade
+++ b/web/src/views/index.jade
@@ -16,4 +16,5 @@ html(lang='en', ng-app='ML')
       include mixins/footer
 
     script(src='index.js')
-    script(src='https://maps.googleapis.com/maps/api/js?sensor=false')
+    // script(src='https://maps.googleapis.com/maps/api/js?sensor=false', 
+    //        async='true')
