--- a/web/src/views/page.jade
+++ b/web/src/views/page.jade
@@ -33,7 +33,7 @@
           ng-include="'views/components/audio.html'")
 
       div(ng-if="section.type == 'GoogleMaps'",
-          ng-include="'views/components/gmap.html'")
+          ng-include="'views/components/google-map.html'")
 
       div(ng-if="section.type == 'YoutubeVideo'",
           ng-include="'views/components/youtube-embed.html'")
