--- a/web/views/components/youtube-embed.html
+++ b/web/views/components/youtube-embed.html
@@ -1,1 +1,1 @@
-<div class="youtube"><iframe bind-once="bind-once" ng-src="{{trustSrc(section.youtube_video_link)}}" frameborder="0" seamless="seamless"></iframe><div bind-once="bind-once" ng-if="section.youtube_video_description" ng-bind-html="section.youtube_video_description"></div></div>
+<figure><iframe bind-once="bind-once" ng-src="{{trustSrc(section.youtube_video_link)}}" frameborder="0" seamless="seamless"></iframe><figcaption><div bind-once="bind-once" ng-if="section.youtube_video_description" ng-bind-html="section.youtube_video_description"></div></figcaption></figure>
