--- a/web/src/views/components/youtube-embed.jade
+++ b/web/src/views/components/youtube-embed.jade
@@ -1,5 +1,6 @@
-.youtube
+figure
   iframe(bind-once, ng-src="{{trustSrc(section.youtube_video_link)}}", 
          frameborder='0', seamless)
-  div(bind-once, ng-if='section.youtube_video_description',
-    ng-bind-html='section.youtube_video_description')
+  figcaption
+    div(bind-once, ng-if='section.youtube_video_description',
+      ng-bind-html='section.youtube_video_description')
