--- a/web/src/views/page.jade
+++ b/web/src/views/page.jade
@@ -1,8 +1,11 @@
 .container
   h1.page-title(bind-once ng-bind='pageTitle', ng-if='pageTitle')
+  include components/search-results
   section.section(ng-repeat='section in sections')
     header.section-header(ng-if='section.title')
-      h1(ng-id='{{section.anchor}}', bind-once, ng-bind='section.title')
+      h1
+        small(ng-if="pageType === 'search'", ng-bind="$index + 1 + ' '", bind-once)
+        strong(ng-id='{{section.anchor}}', bind-once, ng-bind='section.title')
     .section-content
 
       div(ng-if="section.type == 'Questionnaire' || section.type == 'Form'",
