--- a/web/src/views/components/form/select.jade
+++ b/web/src/views/components/form/select.jade
@@ -1,4 +1,4 @@
-select(ng-switch-when='Select', 
+select(ng-switch-when='Select', required='{{field.required}}',
        id='form-{{section.form_template_id}}-{{$index}}')
   option(ng-repeat='opt in field.opts', value='{{$index}}',
          ng-bind='opt') 
