--- a/web/src/views/components/form/textarea.jade
+++ b/web/src/views/components/form/textarea.jade
@@ -1,2 +1,2 @@
-textarea(ng-switch-when='Longtext', rows='5',
+textarea(ng-switch-when='Longtext', rows='5', required='{{field.required}}',
          id='form-{{section.form_template_id}}-{{$index}}')
