--- a/web/src/views/components/description-only.jade
+++ b/web/src/views/components/description-only.jade
@@ -1,5 +1,6 @@
-div(ng-bind-html='section.description_only', bind-once)
+div(ng-bind-html='section.description_only | hl:searchQuery', bind-once)
 div(ng-if='section.more_description') 
+  div(id='more-{{$index}}', 
+      ng-bind-html='section.more_description | hl:searchQuery', bind-once)
   a(role='button', data-toggle='more-{{$index}}',
     ng-bind='section.button_more_description', bind-once)
-  div(id='more-{{$index}}', ng-bind-html='section.more_description', bind-once)
