--- a/web/src/views/components/file.jade
+++ b/web/src/views/components/file.jade
@@ -1,6 +1,6 @@
 figure
   a(ng-href='{{env.REST_URL}}/uploads/{{section.file_dir}}')
-    strong(ng-bind='section.document_name') 
+    strong(ng-bind='section.document_name | hl:searchQuery') 
     small
       | (
       span(ng-if='section.document_type', 
@@ -9,4 +9,5 @@ figure
       span(ng-bind='section.file_size | Filesize', bind-once)
       | )
   figcaption(ng-if='section.document_description',
-             ng-bind-html='section.document_description', bind-once)
+             ng-bind-html='section.document_description | hl:searchQuery',
+             bind-once)
