--- a/web/src/views/index.jade
+++ b/web/src/views/index.jade
@@ -4,9 +4,9 @@ html(lang='en', ng-app='ML')
     meta(charset='utf-8')
     title(ng-if='pageTitle') {{envVars.website_name}} - {{pageTitle}}
     title(ng-if='!pageTitle') {{envVars.website_name}}
-    link(rel='stylsheet', 
+    link(rel='stylesheet', 
          href='http://fonts.googleapis.com/css?family=Lato:300,400,700')
-    link(rel='stylesheet', href='index.css')
+    link(rel='stylesheet', href='dist/index.css')
 
   body(style='overflow-x:hidden')
     .header
@@ -15,4 +15,4 @@ html(lang='en', ng-app='ML')
     .footer
       include mixins/footer
 
-    script(src='index.js')
+    script(src='dist/index.js')
