Bugfix on required attr

--- a/web/src/views/components/form/input-text.jade
+++ b/web/src/views/components/form/input-text.jade
@@ -1,3 +1,2 @@
 input(ng-switch-when='Text', type='text', 
-      id='form-{{section.form_template_id}}-{{$index}}', 
-      required='{{field.required}}')
+      id='form-{{section.form_template_id}}-{{$index}}') 
