--- a/web/src/views/components/form/input-email.jade
+++ b/web/src/views/components/form/input-email.jade
@@ -1,2 +1,2 @@
-input(ng-switch-when='Email', type='email', required='{{required}}',
+input(ng-switch-when='Email', type='email',
       id='form-{{section.form_template_id}}-{{$index}}')
