--- a/web/src/views/components/form/input-radio.jade
+++ b/web/src/views/components/form/input-radio.jade
@@ -3,7 +3,6 @@ ul(ng-switch-when='Radio')
     input(type='radio', 
           name='form-{{section.form_template_id}}-{{$parent.$index}}',
           value='{{$index}}', 
-          id='form-{{section.form_template_id}}-{{$parent.$index}}-{{$index}}', 
-          required='{{field.required}}') 
+          id='form-{{section.form_template_id}}-{{$parent.$index}}-{{$index}}') 
     label(for='form-{{section.form_template_id}}-{{$parent.$index}}-{{$index}}',
           ng-bind='opt')
