--- a/web/views/components/form/input-text.html
+++ b/web/views/components/form/input-text.html
@@ -1,1 +1,1 @@
-<input ng-switch-when="Text" type="text" id="form-{{section.form_template_id}}-{{$index}}" required="{{field.required}}"/>
+<input ng-switch-when="Text" type="text" id="form-{{section.form_template_id}}-{{$index}}"/>
