--- a/web/views/components/form/select.html
+++ b/web/views/components/form/select.html
@@ -1,1 +1,1 @@
-<select ng-switch-when="Select" required="{{field.required}}" id="form-{{section.form_template_id}}-{{$index}}"><option ng-repeat="opt in field.opts" value="{{$index}}" ng-bind="opt"></option></select>
+<select ng-switch-when="Select" id="form-{{section.form_template_id}}-{{$index}}"><option ng-repeat="opt in field.opts" value="{{$index}}" ng-bind="opt"></option></select>
