--- a/web/views/components/form/textarea.html
+++ b/web/views/components/form/textarea.html
@@ -1,1 +1,1 @@
-<textarea ng-switch-when="Longtext" rows="5" required="{{field.required}}" id="form-{{section.form_template_id}}-{{$index}}"></textarea>
+<textarea ng-switch-when="Longtext" rows="5" id="form-{{section.form_template_id}}-{{$index}}"></textarea>
