--- a/web/src/views/components/form/input-file.jade
+++ b/web/src/views/components/form/input-file.jade
@@ -8,7 +8,7 @@ div.file-upload(ng-switch-when='Image', restrict='image.*')
       | )
 
   label(for='form-{{section.form_template_id}}-{{$index}}').btn.btn-upload
-    input(type='file', 
+    input(type='file', ng-model='field.submit_input'
           id='form-{{section.form_template_id}}-{{$index}}',
           class='visually-hidden')
     span(ng-switch='!!preview')
