--- a/web/views/components/form/input-date.html
+++ b/web/views/components/form/input-date.html
@@ -1,1 +1,1 @@
-<input ng-switch-when="Date" type="date" id="form-{{section.form_template_id}}-{{$index}}"/>
+<input ng-switch-when="Date" type="date" ng-model="field.submit_input" id="form-{{section.form_template_id}}-{{$index}}"/>
