--- a/web/src/views/components/form/input-checkbox.jade
+++ b/web/src/views/components/form/input-checkbox.jade
@@ -2,7 +2,7 @@ ul(ng-switch-when='Checkboxes')
   li(ng-repeat='opt in field.opts')
     input(type='checkbox', 
           name='form-{{section.form_template_id}}-{{$parent.$index}}[]',
-          value='{{$index}}',
+          value='{{$index}}', ng-model='field.submit_input[$index]',
           id='form-{{section.form_template_id}}-{{$parent.$index}}-{{$index}}') 
     label(for='form-{{section.form_template_id}}-{{$parent.$index}}-{{$index}}',
           ng-bind='opt')
