--- a/web/src/views/components/form/input-date.jade
+++ b/web/src/views/components/form/input-date.jade
@@ -1,2 +1,2 @@
-input(ng-switch-when='Date', type='date',
+input(ng-switch-when='Date', type='date', ng-model='field.submit_input',
       id='form-{{section.form_template_id}}-{{$index}}')
