--- a/web/src/views/components/form/select.jade
+++ b/web/src/views/components/form/select.jade
@@ -1,4 +1,5 @@
-select(ng-switch-when='Select',
+select(ng-switch-when='Select', ng-model='field.submit_input',
        id='form-{{section.form_template_id}}-{{$index}}')
+  option(value='null') Please select one option
   option(ng-repeat='opt in field.opts', value='{{$index}}',
          ng-bind='opt') 
