--- a/web/views/components/form/select-country.html
+++ b/web/views/components/form/select-country.html
@@ -1,1 +1,1 @@
-<select ng-switch-when="Country" id="form-{{section.form_template_id}}-{{$index}}"><option ng-repeat="opt in countries" value="opt.code" ng-bind="opt.name"></option></select>
+<select ng-switch-when="Country" ng-model="field.submit_input" id="form-{{section.form_template_id}}-{{$index}}"><option ng-repeat="opt in countries" ng-value="{{opt.code}}" ng-bind="opt.name"></option></select>
