sending null as user id if user in not logged on form submit. Fix #4

--- a/web/src/views/components/form/input-file.jade
+++ b/web/src/views/components/form/input-file.jade
@@ -15,4 +15,4 @@ div.file-upload(ng-switch-when='Image', restrict='image.*')
       span(ng-switch-when='true') Replace the file to attach
       span(ng-switch-default) Select the file to attach
 
-  span(ng-if='!fileAPI') Your browser doesn't support the <code>file API<code>
+  span(ng-if='!fileAPI') Your browser doesn't support the <code>file API</code>
