--- a/web/src/views/components/form.jade
+++ b/web/src/views/components/form.jade
@@ -25,7 +25,8 @@ section
         p(ng-if='field.field_description',
           ng-bind-html='field.field_description', bind-once)
 
-    p(ng-if='section.feedback && !section.isComplete') {{section.feedback}}
+    p(ng-if='section.feedback && !section.isComplete')
+      strong(ng-bind='section.feedback')
 
     p(ng-if='section.form_confirmation_message && section.isComplete',
       ng-bind-html='section.form_confirmation_message', bind-once)
