--- a/web/src/views/components/form/input-text.jade
+++ b/web/src/views/components/form/input-text.jade
@@ -1,2 +1,3 @@
 input(ng-switch-when='Text', type='text', ng-model='field.submit_input',
+      ng-required='field.required',
       id='form-{{section.form_template_id}}-{{$index}}') 
