--- a/web/src/views/components/form/input-date.jade
+++ b/web/src/views/components/form/input-date.jade
@@ -1,2 +1,4 @@
-input(ng-switch-when='Date', type='date', ng-model='field.submit_input',
+input(ng-switch-when='Date', 
+      type='date', ng-model='field.submit_input',
+      ng-required='field.required',
       id='form-{{section.form_template_id}}-{{$index}}')
