--- a/web/views/components/form/input-email.html
+++ b/web/views/components/form/input-email.html
@@ -1,1 +1,1 @@
-<input ng-switch-when="Email" type="email" ng-model="field.submit_input" id="form-{{section.form_template_id}}-{{$index}}"/>
+<input ng-switch-when="Email" type="email" ng-required="field.required" ng-model="field.submit_input" id="form-{{section.form_template_id}}-{{$index}}"/>
