--- a/web/src/views/index.jade
+++ b/web/src/views/index.jade
@@ -8,7 +8,7 @@ html(lang='en', ng-app='ML')
          href='http://fonts.googleapis.com/css?family=Lato:300,400,700')
     link(rel='stylesheet', href='dist/index.css')
 
-  body(style='overflow-x:hidden')
+  body(style='overflow-x:hidden', ng-class='activeNav')
     .header
       include mixins/header
     .content(ng-view)
