--- a/web/src/css/index.styl
+++ b/web/src/css/index.styl
@@ -34,3 +34,13 @@
   background-size contain
   border-radius 64px
   opacity .9
+
+img[lazy-src]
+  opacity 1
+  transition opacity .3s ease-in-out
+
+img[lazy-src].img-loading
+  opacity 0
+
+.gallery
+  background url('../assets/loader1.gif') center center no-repeat
