--- a/web/src/views/components/gallery.jade
+++ b/web/src/views/components/gallery.jade
@@ -2,7 +2,7 @@
   ul(style='overflow:hidden;overflow-x:auto;padding:0;text-align:center;font-size:0;white-space:nowrap;list-style:none')
     li(bind-once, ng-repeat='item in section.gallery',
        style='display:inline-block')
-      img(bind-once, ng-src='{{env.REST_URL}}/uploads/{{item.file_dir}}',
+      img(bind-once, lazy-src='{{env.REST_URL}}/uploads/{{item.file_dir}}',
           style="display:block;max-height:100%;max-width:100%")
 p(ng-if='section.gallery_description',
   ng-bind='section.gallery_description',
