Delay the appearance of the route loader of 300ms, to prevent blinking if the route loads in less than 300ms + Cleaning arbo

--- a/web/src/views/index.jade
+++ b/web/src/views/index.jade
@@ -20,7 +20,6 @@ html(lang='en')
       .content(ng-view)
       .footer
         include mixins/footer
-      .route-loader(ng-show='routeLoading')
-        span Loading…
+      route-loader(rel='routeLoading')
 
     script(src='dist/index.js')
