--- a/web/src/css/loaders.styl
+++ b/web/src/css/loaders.styl
@@ -28,10 +28,9 @@
   background-size contain
   border-radius 64px
   opacity 0
-  visibility hidden
-  transition opacity 0s ease-in-out .3s
+  pointer-events none
+  transition opacity .2s ease-in-out .3s
   &.loading
-    visibility visible
     opacity 0.9
 
 img[lazy-src]
