--- a/web/views/components/form/input-range.html
+++ b/web/views/components/form/input-range.html
@@ -1,1 +1,1 @@
-<input ng-switch-when="Slider" type="range" ng-model="field.submit_input" min="{{field.slider_floor}}" max="{{field.slider_ceiling}}" ng-value="{{field.slider_ceiling/2}}" step="{{field.slider_step}}"/>
+<span ng-switch-when="Slider" class="form-slider"><input ng-switch-when="Slider" type="range" ng-model="field.submit_input" min="{{field.slider_floor}}" max="{{field.slider_ceiling}}" step="{{field.slider_step}}"/></span>
