--- a/web/src/views/index.jade
+++ b/web/src/views/index.jade
@@ -4,8 +4,8 @@ html(lang='en')
     meta(charset='utf-8')
     title(ng-bind='pageTitleBind') MINDLIFE
     link(rel='stylesheet', href='dist/index.css')
-    link(rel='stylesheet', 
-         href='http://fonts.googleapis.com/css?family=Lato:300,400,700')
+    // link(rel='stylesheet', 
+    //      href='http://fonts.googleapis.com/css?family=Lato:300,400,700')
 
   body(style='overflow-x:hidden', ng-class='activeNav')
 
